--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,10 @@ click = "^8.1.7"
 argon2-cffi = "^23.1.0"
 pyjwt = "^2.8.0"
 rich = "^13.6.0"
+werkzeug = "^3.0.1"
+rich-click = "^1.7.1"
+pytest = "^7.4.3"
+faker = "^19.13.0"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.4.2"
