--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,10 +1,10 @@
 [tool.poetry]
-name = "da-python-12"
-version = "0.1.0"
-description = ""
-authors = ["TMee3  <theopsna@protonmail.com>"]
+name = "epic events"
+version = "0.0.1"
+description = "Internal CRM software from Epic Events."
+authors = ["Théo Pidoux"]
 readme = "README.md"
-packages = [{include = "da_python_12"}]
+packages = [{include = "epic_events"}]
 
 [tool.poetry.dependencies]
 python = "^3.10"
@@ -15,10 +15,8 @@ click = "^8.1.7"
 argon2-cffi = "^23.1.0"
 pyjwt = "^2.8.0"
 rich = "^13.6.0"
-werkzeug = "^3.0.1"
-rich-click = "^1.7.1"
-pytest = "^7.4.3"
-faker = "^19.13.0"
+sentry-sdk = "^1.35.0"
+termcolor = "^2.3.0"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.4.2"
