--- a/.env
+++ b/.env
@@ -3,3 +3,4 @@ FIRST_USER_EMAIL=admin@admin.fr
 FIRST_USER_NAME=admin
 FIRST_USER_PASSWORD=admin
 JWT_KEY=secret
+SENTRY_DSN=https://7b3050c3d902f13404bd834ae5173db0@o4506340937760768.ingest.sentry.io/4506340939333632
